# EulerLisp

./: .gitignore  Cargo.toml  README.md
examples/: fib.scm  miller_rabin.scm  raytracer.scm
lisp-macros/: Cargo.toml  function.rs  lib.rs
src/: bignum.rs  code_formatter.rs  debugger.rs  doc.rs  env.rs  evaluator.rs  expression.rs  heap.rs  instruction.rs  lexer.rs  lib.rs  macros.rs  main.rs  numbers.rs  parser.rs  repl.rs  symbol_table.rs  syntax_rule.rs  value.rs  vm.rs
src/builtin/: .#string.rs  bignum.rs  bitwise.rs  comparison.rs  data_structures.rs  list.rs  math.rs  misc.rs  mod.rs  primes.rs  string.rs  testing.rs  types.rs
src/compiler/: constant_folding.rs  error.rs  instruction.rs  mod.rs  optimize.rs  preprocessor.rs  vm.rs
src/data_structures/: priority_queue.rs
src/vm/: bytecode.rs  context.rs  error.rs  mod.rs
stdlib/: 1_syntax_rules.scm  2_list.scm  2_math.scm  3_list.scm  3_math.scm  4_string.scm  5_bitvector.scm  6_stream.scm  7_pqueue.scm  8_fn.scm  9_euler.scm  euler.scm  fn.scm
tests/: integration_test.rs
utils/: gen_fst.rb
