[package]
name = "lisp"
version = "0.1.0"
authors = ["Leon Rische <leon.rische@me.com>"]
edition = "2018"

[dependencies]
time = "0.1"
num = "0.2"
rustyline = "1.0.0"
rand = "0.3"
glob = "0.2"
bit-vec = "0.4.4"
colored = "1.6.0"
csv = "1.0.0-beta.5"
rayon = "1.0"
byteorder = "1.2"

[profile.release]
debug = true
